--- a/index.html
+++ b/index.html
@@ -53,8 +53,118 @@
                </div>
             </div>
         </section>
+        <!-- what i do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I do</h3>
+            <!-- .skills-container..skill*4>img+p.skill-title+p.skill-description>lorem15 -->
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">vanilla javaScr</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos sint nemo unde dolorum deleniti ratione.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Illum architecto suscipit, amet velit modi voluptate eius, asperiores distinctio est fugiat officiis quia sequi.</p>
+               </div>
+               <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Nodejs</p>
+                    <p class="skill-description">Quia eveniet reiciendis dolorum accusamus deserunt atque sunt laborum laudantium. Eveniet minus autem expedita esse.</p>
+               </div>
+               <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">Mongodb</p>
+                    <p class="skill-description">Incidunt, eum repellendus? Delectus, dolores veniam. Eum animi porro optio tempore sapiente, voluptas neque eius.</p>
+               </div>
+        </section>
+        <!-- resume section -->
+        <section class="resume">
+            <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resume-content">
+                <div>
+                    <h3 class="resume-title">My education</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                </div>
+                <div>
+                    <h3 class="resume-title">My experience</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr><div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr><div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="resume-button">
+                <button class="btn-primary">Download Cv</button>
+            </div>
+
+        </section>
+        <!-- contact section -->
+        <section class="contact">
+            <div>
+                <h3 class="section-title">Lets Connect</h3>
+                <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, natus! Mollitia voluptates itaque pariatur aliquam ducimus nostrum voluptate deserunt cumque?</p>
+                <a href="">
+                    <img src="images/icons/facebook.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/twitter.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/insta.png" alt="">
+                </a>
+            </div>
+            <div>
+                <h3 class="section-title">Lets message me</h3>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Your Name">
+                    <input type="Email" name="" id="" placeholder="Your Email">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="message"></textarea>
+                    <input class="btn-primary" type="submit" value="Submit">
+                </form>
+               
+            </div>
+
+        </section>
     </main>
     <footer>
+
 
     </footer>
 </body>
