--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
+    <script src="https://kit.fontawesome.com/8fa804c249.js" crossorigin="anonymous"></script>
+   
     <link rel="stylesheet" href="styles/portfolio.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +27,7 @@
                 <h3 class="bannar-sub-title">Hi, Iam</h3>
                 <h2 class="bannar-title">Alina</h2>
                 <p class="bannar-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download Cv</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download </button>
             </div>
             <img src="images/hardy.png" alt="">
         </div>
